Few more strings for CloudService.apk

--- a/Italian/main/CloudService.apk/res/values-it/strings.xml
+++ b/Italian/main/CloudService.apk/res/values-it/strings.xml
@@ -1,51 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="xmpp_server_addr" />
-    <string name="app_name">Micloud Services</string>
+    <string name="app_name">Servizi Micloud</string>
     <string name="xiaomi_account_type">com.xiaomi</string>
-    <string name="sync_item_sms_title">Sync text messages</string>
-    <string name="sync_item_sms_summary">Turn on after messages have been synced</string>
-    <string name="sub_sync_item_sms_title_wifi_only">Sync MMS via WLAN only</string>
-    <string name="sub_sync_item_sms_summary">"Don't use mobile data connection to sync multimedia messages"</string>
-    <string name="pref_title_sync_contacts_title">Sync contacts</string>
-    <string name="pref_title_sync_display_photo_on_wifi_only">Display photos via WLAN</string>
-    <string name="pref_summary_sync_display_photo_on_wifi_only">"Don't use mobile data connection to sync contact photos"</string>
-    <string name="find_device_stop_noise">Stop</string>
-    <string name="find_device_noise_title">Locate device sound</string>
-    <string name="error_title">Sync error</string>
-    <string name="error_unauthorized">Too many sign-in attempts: Sync disabled.</string>
-    <string name="error_forbidden">There are some problems with your account: Sync disabled.</string>
-    <string name="error_not_acceptable">Server error: Sync disabled.</string>
-    <string name="activate">Activate</string>
-    <string name="activate_fail_notification_title">Reactivate sync</string>
-    <string name="sim_changed_reactivate_notice">Current SIM is deactivated. An activation text will be sent automatically (normal rates apply).</string>
-    <string name="sim_changed_reactivate_int_notice">Current SIM is deactivated. An activation text will be sent automatically (international rates apply).</string>
-    <string name="no_sim">No SIM card detected</string>
-    <string name="sim_unavailable">SIM card unavailable</string>
-    <string name="sim_locked">SIM card is locked</string>
-    <string name="sim_not_ready">SIM card in use. Try again later.</string>
-    <string name="sim_in_airplane_mode">You need to disable airplane mode.</string>
+    <string name="sync_item_sms_title">Sincronizza SMS</string>
+    <string name="sync_item_sms_summary">Attiva dopo che i messaggi sono stati sincronizzati</string>
+    <string name="sub_sync_item_sms_title_wifi_only">Sincronizza MMS solo con Wi-Fi</string>
+    <string name="sub_sync_item_sms_summary">Non utilizzare la rete dati mobile per sincronizzare i messaggi multimediali</string>
+    <string name="pref_title_sync_contacts_title">Sincronizza i contatti</string>
+    <string name="pref_title_sync_display_photo_on_wifi_only">Mostra foto solo con Wi-Fi</string>
+    <string name="pref_summary_sync_display_photo_on_wifi_only">Non utilizzare la rete dati mobile per sincronizzare le foto dei contatti</string>
+    <string name="find_device_stop_noise">Interrompi</string>
+    <string name="find_device_noise_title">Suono di localizzazione telefono</string>
+    <string name="error_title">Errore di sincronizzazione</string>
+    <string name="error_unauthorized">Troppi tentativi di accesso: sincronizzazione disattivata.</string>
+    <string name="error_forbidden">Si sono verificati dei problemi con il tuo account: sincronizzazione disattivata.</string>
+    <string name="error_not_acceptable">Errore del server: sincronizzazione disattivata.</string>
+    <string name="activate">Attiva</string>
+    <string name="activate_fail_notification_title">Riattiva sincronizzazione</string>
+    <string name="sim_changed_reactivate_notice">La SIM in uso è disattivata. Verrà inviato automaticamente un messaggio di attivazione (al costo nazionale previsto dal tuo operatore).</string>
+    <string name="sim_changed_reactivate_int_notice">La SIM in uso è disattivata. Verrà inviato automaticamente un messaggio di attivazione (al costo internazionale previsto dal tuo operatore).</string>
+    <string name="no_sim">SIM non rilevata</string>
+    <string name="sim_unavailable">SIM non disponibile</string>
+    <string name="sim_locked">SIM bloccata</string>
+    <string name="sim_not_ready">SIM card in uso. Riprova più tardi.</string>
+    <string name="sim_in_airplane_mode">Devi disattivare la modalità aereo.</string>
     <string name="show_password">Show password</string>
     <string name="account">Account</string>
-    <string name="account_hint_text">Email or phone number</string>
-    <string name="phone_num_hint_text">Phone number</string>
-    <string name="login">Sign in</string>
-    <string name="verify">Verify</string>
-    <string name="next">Next</string>
-    <string name="prev">Back</string>
-    <string name="forget_password"><u>Forgot password</u></string>
-    <string name="foreign_login"><u>Country/Area code</u></string>
+    <string name="account_hint_text">Email o telefono</string>
+    <string name="phone_num_hint_text">Telefono</string>
+    <string name="login">Accedi</string>
+    <string name="verify">Verifica</string>
+    <string name="next">Avanti</string>
+    <string name="prev">Indietro</string>
+    <string name="forget_password"><u>Password dimenticata</u></string>
+    <string name="foreign_login"><u>Paese/Prefisso</u></string>
     <string name="seperator_forget_and_foreign">|</string>
     <string name="password">Password</string>
-    <string name="captcha">Captcha code</string>
-    <string name="vcode">Verification code</string>
-    <string name="bad_authentication">Invalid username or password</string>
+    <string name="captcha">Captcha</string>
+    <string name="vcode">Codice di verifica</string>
+    <string name="bad_authentication">Nome utente o password non validi</string>
     <string name="int_phone_user_notice">You need to add the country code when using a number from outside of mainland China to sign in.</string>
-    <string name="micloud_welcome_skip_login"><u>Skip this step</u></string>
-    <string name="micloud_account_name">Xiaomi Account</string>
-    <string name="micloud_reg_new">Create an account</string>
-    <string name="micloud_error_empty_username">Enter username</string>
-    <string name="micloud_error_empty_pwd">Enter password</string>
+    <string name="micloud_welcome_skip_login"><u>SAlata questo passaggio</u></string>
+    <string name="micloud_account_name">Account Xiaomi</string>
+    <string name="micloud_reg_new">Crea un account</string>
+    <string name="micloud_error_empty_username">Inserisci nome utente</string>
+    <string name="micloud_error_empty_pwd">Inserisci password</string>
     <string name="micloud_error_invalid_phone_num">Invalid phone number</string>
     <string name="micloud_error_illegal_pwd">The password you entered is incorrect</string>
     <string name="micloud_error_empty_captcha_code">Enter captcha code</string>
