--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -2441,7 +2441,7 @@ ed esegui il software."</string>
     <string name="sync_wifi_label">Wi-Fi</string>
     <string name="wifi_enable">Wi-Fi</string>
     <string name="bluetooth_enable">Bluetooth</string>
-    <string name="sync_enable">Abilita sincr. automatica</string>
+    <string name="sync_enable">Abilita sincronizzazione automatica</string>
     <string name="accessibility_enable">Accessibilità</string>
     <string name="development_enable">Opzioni sviluppatore</string>
     <string name="device_name">Nome dispositivo</string>
