--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -14,7 +14,7 @@
     <string name="status_bar_settings_toggle_layout_style_single_page">Pagina</string>
     <string name="status_bar_settings_toggle_layout_style_applying">Cambiamento stile…</string>
     <string name="status_bar_settings_custom_notification">Gestione notifiche</string>
-    <string name="status_bar_settings_all_app_display_loading">Caricamento…</string>s
+    <string name="status_bar_settings_all_app_display_loading">Caricamento…</string>
     <string name="status_bar_settings_show_notificationBar_notification">Mostra nella barra notifiche</string>
     <string name="status_bar_settings_show_statusBar_notification">Mostra nel keyguard</string>
     <string name="status_bar_filter_item_preview_image">Anteprima</string>
