--- a/Italian/device/mocha/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/MiuiCamera.apk/res/values-it/strings.xml
@@ -33,6 +33,7 @@
     <string name="pref_captrue_mirror_title">Fotoc.frontale (effetto specchio)</string>
     <string name="pref_captrue_mirror_entry_off">Disattivato</string>
     <string name="pref_captrue_mirror_entry_on">Attivato</string>
+	<string name="pref_front_mirror_title">Fotocamera anteriore a specchio</string>
     <string name="pref_video_quality_title">Qualità video</string>
     <string name="pref_video_quality_entry_1080p">FULL HD</string>
     <string name="pref_video_quality_entry_720p">HD</string>
